--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     padding-left: 240px;
   }
 }
+.scrollable-element {
+  scrollbar-width: thin;
+}
 body {
   overflow: hidden; /* Hide scrollbars */
 }
